<?xml version="1.0"?>
<?xml-model href="" schematypens=""?>
<package format="3">
  <name>robot_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for robot control</description>
  <maintainer email="yx-xx@xx.com">yx-xx</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
